# chest-xray-classifier

./: .gitignore  pyproject.toml
models/: checkpoint_mlp.pt
part_1_mlp/src/: dataset_mlp.py  evaluator_mlp.py  improved_mlp.py  main_mlp.py  models_mlp.py  trainer_mlp.py
part_2_cnn/: README.md  cnn_with_augmentation.py  eval_resnet.py  gradcam_simple.py  gradcam_v2.py  main.py  test_infer.py  train_resnet_only.py
part_2_cnn/src/: cnn_manual.py  comparative_cnn_experiments.py  dataset.py  evaluate.py  feature_visualization.py  infer.py  main_cnn_part2.py  model.py  model_resnet.py  train.py
part_3_rnn/src/: main_rnn_part3.py  rnn_models.py  rnn_trainer.py  seq2seq_implementation.py  text_dataset.py
